--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Apr 24 09:54:19 CEST 2008 Daniel Veillard <veillard@redhat.com>
+
+	* AUTHORS: indicate that the Logo is by Diana Fong
+	* docs/index.py: modify to also index subprojects pages
+
 Wed Apr 23 15:38:11 EST 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* docs/Makefile.am, docs/news.xsl: Fix generation of NEWS file
