Adding Anton Protopopov to AUTHORS Daniel

--- a/AUTHORS
+++ b/AUTHORS
@@ -42,6 +42,7 @@ Patches have also been contributed by:
   Daniel Hokka Zakrisson <daniel@hozac.com>
   Mads Chr. Olesen     <shiyee@shiyee.dk>
   Cole Robinson        <crobinso@redhat.com>
+  Anton Protopopov     <aspsk2@gmail.com>
 
   [....send patches to get your name here....]
 
