--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Apr 28 09:32:22 EST 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	* tests/.valgrind.supp, tests/Makefile.am: Ignore bash bugs when
+	running valgrind
+
 Mon Apr 28 11:08:58 CEST 2008 Jim Meyering <meyering@redhat.com>
 
 	avoid format-related warnings
