--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Apr 29 09:46:00 EST 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/hash.c: remove bogus test code accidentally added in
+	previous commit
+
 Tue Apr 29 15:20:12 CEST 2008 Jim Meyering <meyering@redhat.com>
 
 	Avoid "make syntax-check" failures.
