--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu May  1 14:10:28 EST 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/remote_internal.c: Cope with NULL from qparam_get_query
+	by removing unncessary check. (Dave Leskovec)
+
 Tue Apr 29 12:32:28 EST 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* configure.in: Remove compatability macros AC_CHECK_*_ONCE for
