--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,19 @@
+Fri May  9 15:45:39 CEST 2008 Jim Meyering <meyering@redhat.com>
+
+	Prepare to use gnulib's c-type module.
+	* bootstrap: Move module list into separate variable w/less syntax.
+	(modules): Add c-ctype.
+	Update the following from gnulib:
+	* build-aux/useless-if-before-free:
+	* build-aux/vc-list-files:
+	* gnulib/lib/Makefile.am:
+	* gnulib/lib/getaddrinfo.h:
+	* gnulib/m4/gnulib-cache.m4:
+	* gnulib/m4/gnulib-comp.m4:
+	* gnulib/m4/inet_ntop.m4:
+	* gnulib/tests/Makefile.am:
+	* gnulib/tests/test-getaddrinfo.c:
+
 Fri May  9 10:10:28 CEST 2008 Daniel Veillard <veillard@redhat.com>
 
 	* src/xen_unified.c src/xend_internal.c src/xend_internal.h: patch
